# TransISA

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  example.py  example.s  merge_main.sh  output.s
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE
.github/workflows/: code_quality.yaml  macos.yaml  tests.yaml
TransISA/: CMakeLists.txt  Common.h
TransISA/Codegen/: Emitter.h
TransISA/Frontend/: Lifter.h
TransISA/Optimizer/: PassManager.h
TransISA/Utils/: Logger.h
benchmarking/: analyzefiles.py
benchmarking/arm/: add_O0  add_O0.s  add_O1  add_O1.s  add_O2  add_arm.s  add_x86  fibonacci_O0  fibonacci_O0.s  fibonacci_O1  fibonacci_O1.s  fibonacci_O2  fibonacci_x86  gcd_O0  gcd_O0.s  gcd_O1  gcd_O1.s  gcd_O2  gcd_x86  hello.s  hello_O0  hello_O0.s  hello_O1  hello_O2  hello_O2.s  hello_arm  hello_x86  max_of_three_O0  max_of_three_O0.s  max_of_three_O1  max_of_three_O1.s  max_of_three_O2  max_of_three_x86  nested_loop_O0  nested_loop_O0.s  nested_loop_O1  nested_loop_O2  nested_loop_O2.s  nested_loop_x86  sum_loop_O0  (+5 more)
benchmarking/results/: metrics.csv  metrics.json
benchmarking/x86/: abs_val.s  add.s  bitwise_not.s  factorial.s  fibonacci.s  gcd.s  hello.s  hello_x86.s  imul3op.s  max_of_three.s  nested_loop.s  signed_div.s  sum_loop.s  swap.s
docs/: Doxyfile
include/: CMakeLists.txt  Common.h
include/codegen/: Codegen.h
include/ir/: IRBuilder.h  IRNode.h
include/lexer/: Lexer.h  Token.h  Trie.h
include/llvm_ir/: LLVMIRGenerator.h
include/optimizer/: Optimizer.h
include/parser/: AST.h  Parser.h
src/: CMakeLists.txt  main.cpp
src/Codegen/: CMakeLists.txt
src/Frontend/: CMakeLists.txt  Lifter.cpp  cMakeLists.txt
src/Optimizer/: CMakeLists.txt  cMakeLists.txt
src/Utils/: CMakeLists.txt  cMakeLists.txt
src/codegen/: CMakeLists.txt  Codegen.cpp
src/ir/: CMakeLists.txt
src/lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp  Trie.cpp
src/llvm_ir/: CMakeLists.txt  LLVMIRGenerator.cpp
src/optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
src/parser/: CMakeLists.txt  Parser.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_llvm_codegen.cpp  test_parser.cpp  tests_main.cpp
